@@ -1,42 +1,3 @@
 <div id="RSide" class="sidebar">
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=364605"><B>Annoucement: MinGWiki</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2004-04-01 06:55</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>I've installed phpwiki version 1.3.7 for your enjoyment.  You may interact with it at <a href="http://www.mingw.org/MinGWiki/" target="_new">http://www.mingw.org/MinGWiki/</a><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=364605">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=363561"><B>Snapshot: MSYS-1.0.11-2004.03.30-1.exe</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2004-03-30 05:50</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>File: <a href="http://prdownloads.sf.net/mingw/MSYS-1.0.11-2004.03.30-1.exe?downlaod" target="_new">http://prdownloads.sf.net/mingw/MSYS-1.0.11-2004.03.30-1.exe?downlaod</a><BR><BR>Minimal SYStem<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=363561">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=360553"><B>Release: MSYS-1.0.10.exe</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2004-03-18 04:16</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>MinGW: import libraries and header files for use with GCC to build native Windows applications; now with added extentions to the MSVC runtime to support C99 functionality. A collection of freely available and freely distributable Windows specific header files and import libraries combined with GNU toolsets that allow one to produce native Windows programs that do not rely on any 3rd-party C runtime DLLs.<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=360553">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=358901"><B>Candidate: MSYS-1.0.10-rc-5.exe</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2004-03-10 16:15</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR> File: <a href="http://prdownloads.sf.net/mingw/MSYS-1.0.10-rc-5.exe?download" target="_new">http://prdownloads.sf.net/mingw/MSYS-1.0.10-rc-5.exe?download</a><BR><BR>Two bugs have been resolved since rc-4:<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=358901">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=354244"><B>Candidate: GCC-3.3.3</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>dannysmith - 2004-02-23 00:40</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>GCC 3.3.3 binary release candidate for mingw is available.<BR>You can download it from:<BR><a href="https://sourceforge.net/project/showfiles.php?group_id=2435" target="_new">https://sourceforge.net/project/showfiles.php?group_id=2435</a><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=354244">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=352558"><B>Released: w32api-2.5.tar.gz</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2004-02-15 01:24</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR> File: <a href="http://prdownloads.sf.net/mingw/w32api-2.5.tar.gz?download" target="_new">http://prdownloads.sf.net/mingw/w32api-2.5.tar.gz?download</a><BR><BR>I've released the 2.5 version of the MinGW Windows API. There have been many changes. See the notes page for a list of changes <a href="http://sourceforge.net/project/shownotes.php?release_id=158847" target="_new">http://sourceforge.net/project/shownotes.php?release_id=158847</a><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=352558">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=350139"><B>Candidate: MSYS-1.0.10-rc-4.exe</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2004-02-02 07:26</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>File: <a href="http://prdownloads.sf.net/mingw/MSYS-1.0.10-rc-4.exe?download" target="_new">http://prdownloads.sf.net/mingw/MSYS-1.0.10-rc-4.exe?download</a><BR><BR>I've reverted back to the rxvt and libW11.dll versions found in MSYS-1.0.9 and made a modification to msys.bat that added the -geometry parameter to work around the off by one problem.  Thanks to Dave Schuyler &lt;<a href="mailto:parameter@users.sf.net" target="_new">parameter@users.sf.net</a>&gt; for the work around.<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=350139">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=346845"><B>Candidate: binutils 2.14.90-20040120-1</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>dannysmith - 2004-01-20 17:58</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>I have uploaded update  of binutils (2.14.90-20040120-1)<BR>to MinGW's Sourceforge File Release page. You can download it<BR>from:<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=346845">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=346502"><B>Updated: autoconf, automake and libtool</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2004-01-20 07:43</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>You will find a tarball archive of the most recent versions of autoconf, automake and libtool in the ``Current-&gt;MSYS Developer Tool Kit'' SF FRS package.  These are to replace the versions distributed in the install executable.  Please extract the archive to the MSYS root / directory.<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=346502">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=332800"><B>Candidate: MSYS-1.0.10-rc-3.exe</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2003-11-29 08:52</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>File: <a href="http://prdownloads.sf.net/mingw/MSYS-1.0.10-rc-3.exe?download" target="_new">http://prdownloads.sf.net/mingw/MSYS-1.0.10-rc-3.exe?download</a><BR><BR>This candidate is using rxvt-2.7.9 in order to eliminate some of the problems that have been recently discussed on the list.  I've seen marked improvement with the overall functioning of this version.<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=332800">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=318361"><B>Candidate: MSYS-1.0.10-rc-2.exe</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2003-10-11 07:50</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>File: <a href="http://prdownloads.sf.net/mingw/MSYS-1.0.10-rc-2.exe?download" target="_new">http://prdownloads.sf.net/mingw/MSYS-1.0.10-rc-2.exe?download</a><BR><BR>I think that I've accomplished the impossible.  At least the stackdump causing bug hasn't appeared for me for a while.  Give it a try.<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=318361">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=318340"><B>Snapshot: gdb-6.0-20031011.exe</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2003-10-11 03:45</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>File: <a href="http://prdownloads.sourceforge.net/mingw/gdb-6.0-20031011.exe?download" target="_new">http://prdownloads.sourceforge.net/mingw/gdb-6.0-20031011.exe?download</a><BR><BR>A snapshot of the gdb-6.0 for MinGW. This will install over the standard MinGW release.<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=318340">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=318170"><B>Released: mingw-runtime-3.2.tar.gz</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2003-10-10 09:00</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>File:  <a href="http://prdownloads.sourceforge.net/mingw/mingw-runtime-3.2.tar.gz?download" target="_new">http://prdownloads.sourceforge.net/mingw/mingw-runtime-3.2.tar.gz?download</a><BR><BR>2003-10-10  Earnie Boyd  &lt;<a href="mailto:earnie@users.sourceforge.net" target="_new">earnie@users.sourceforge.net</a>&gt;<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=318170">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=310799"><B>Released: MinGW-3.1.0-1.exe</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2003-09-15 11:48</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>File: <a href="http://prdownloads.sf.net/mingw/MinGW-3.1.0-1.exe?download" target="_new">http://prdownloads.sf.net/mingw/MinGW-3.1.0-1.exe?download</a><BR><BR>Updated with the current releases of w32api-2.4 and mingw-runtime-3.1.<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=310799">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=310781"><B>Released: mingw-runtime-3.1.tar.gz</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2003-09-15 08:35</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>File: <a href="http://prdownloads.sf.net/mingw/mingw-runtime-3.1.tar.gz?download" target="_new">http://prdownloads.sf.net/mingw/mingw-runtime-3.1.tar.gz?download</a><BR><BR>2003-07-03  Earnie Boyd  &lt;<a href="mailto:earnie@users.sf.net" target="_new">earnie@users.sf.net</a>&gt;<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=310781">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=310051"><B>Released: w32api-2.4.tar.gz</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2003-09-12 08:32</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>File: <a href="http://prdownloads.sf.net/mingw/w32api-2.4.tar.gz?download" target="_new">http://prdownloads.sf.net/mingw/w32api-2.4.tar.gz?download</a><BR><BR>The long awaited 2.4 version of the MinGW Windows API has been uploaded to the file server.  There have been many changes.  See the notes page for a list of changes <a href="http://sourceforge.net/project/shownotes.php?release_id=158847" target="_new">http://sourceforge.net/project/shownotes.php?release_id=158847</a><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=310051">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=307884"><B>Released: MinGW-3.0.0-1.exe</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2003-09-05 08:03</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>File: <a href="http://prdownloads.sf.net/mingw/MinGW-3.0.0-1.exe?download" target="_new">http://prdownloads.sf.net/mingw/MinGW-3.0.0-1.exe?download</a><BR><BR>This is the official production release of MinGW-3.0.0.  There are no changes from the 3.0.0-rc4 release.<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=307884">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=300997"><B>Candidate: binutils 2.14.90</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>dannysmith - 2003-08-11 17:44</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>I have uploaded update  of binutils (2.14.90-20030807-1)<BR>to MinGW's Sourceforge File Release page. You can download it<BR>from:<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=300997">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=300996"><B>Candidate: GCC 3.3.1</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>dannysmith - 2003-08-11 17:42</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>GCC 3.3.1 binary release candidate for mingw is available.<BR>You can download it from:<BR><a href="https://sourceforge.net/project/showfiles.php?group_id=2435" target="_new">https://sourceforge.net/project/showfiles.php?group_id=2435</a><div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=300996">[Read More/Comment]</a></div><HR width="100%" size="1" noshade>
-					<A HREF="http://sourceforge.net/forum/forum.php?forum_id=299209"><B>Candidate: MinGW-3.0.0-rc4.exe</B></A>
-					<BR>&nbsp;&nbsp;&nbsp;&nbsp;<I>earnie - 2003-08-05 04:45</I> &nbsp; - &nbsp; <A HREF="http://sourceforge.net/projects/mingw/">MinGW - Minimalist GNU for Windows</A><BR>File:  <a href="http://prdownloads.sf.net/mingw/MinGW-3.0.0-rc4.exe?download" target="_new">http://prdownloads.sf.net/mingw/MinGW-3.0.0-rc4.exe?download</a><BR><BR>I've added the missing mingw32 directory tree.<div align="center">  <A HREF="http://sourceforge.net/forum/forum.php?forum_id=299209">[Read More/Comment]</a></div><HR width="100%" size="1" noshade><div align="center"><a href="http://sourceforge.net/news/?group_id=2435">[News archive]</a></div>
+#include ../news-short.html
 </div>
