@@ -1,3 +1,8 @@
+2004-05-06  Earnie Boyd  <earnie@users.sf.net>
+
+	* ssi/rside.html: Include news-short.html instead of posting static
+	news in the CVS.
+
 2004-05-02	Nathan Fisher <natbobc@users.sf.net>
 
 	* bugs.shtml: Change to new style.
